docker backend : ogr2ogr ajouté + précision commande

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,16 @@
 FROM python:3.10-slim
 
+# Installer les dépendances système nécessaires à GDAL
+RUN apt-get update && apt-get install -y \
+    gdal-bin \
+    libgdal-dev \
+    postgresql-client \
+    && apt-get clean
+
+# Définir une variable d'environnement pour GDAL
+ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
+ENV C_INCLUDE_PATH=/usr/include/gdal
+
 # Installer les dépendances
 WORKDIR /app
 COPY requirements.txt .
