from mapbox to maplibre

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "mapbox-gl": "^3.8.0"
+    "mapbox-gl": "^3.8.0",
+    "maplibre-gl": "^5.0.0"
   }
 }
