feat(backend): Parametrize uvicorn port

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,4 +21,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Exposer l'application FastAPI
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+ARG PORT=80
+ENV PORT=${PORT}
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT}"]
