--- a/compose.yml
+++ b/compose.yml
@@ -33,7 +33,10 @@ services:
       - "8000:8000"
 
   frontend:
-    image: nginx:latest
+    build:
+      context: ./frontend
+      args:
+        BACKEND_URL: http://localhost:8000
     container_name: frontend
     volumes:
       - ./frontend:/usr/share/nginx/html:ro
