--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,9 @@
     "maplibre-gl": "^5.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.7"
   }
 }
